force-app/src/objects/ffr__ReportingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Reporting Settings</description>
    <fields>
        <fullName>ffr__AutoGeneratePromptMapping__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting allows you to automatically create an associated reporting prompt mapping when creating, updating, or deleting a reporting filter mapping.</description>
        <inlineHelpText>Allows you to automatically create an associated reporting prompt mapping when creating, updating, or deleting a reporting filter mapping.</inlineHelpText>
        <label>Automatically Generate Prompt Mappings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__DisableCustomPermissions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Disable Permissions on VisualForce Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__HideSecurityWarning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This custom field allow user to hide an informative message in case there are non accessible fields for the user. This message appears at the top of the report listing the non accessible fields</description>
        <label>Hide Security Warning</label>
        <type>Checkbox</type>
    </fields>
    <label>Reporting Settings (FF)</label>
</CustomObject>